# moose

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CODEBASE.md  DESIGN.md  KOTOIQ_INVENTORY.md  MULTI_VARIANT_SPEC.md  README.md  TODOS.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package-old.json  package.json  vercel.json  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
_knowledge/: data-integrity-audit.md  data-integrity-standard.md  env-vars.md  kotoiq-how-it-works.md  kotoiq-spec-v3.md  kotoiq-technical-spec.md  kotoproof-security-audit.md  obsidian-setup.md  session-log.md
chrome-extension/: README.md  manifest.json
desktop-app/: .gitignore  README.md  SHIPPING.md  package-lock.json  package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs  main.rs
eslint-rules/: no-unscoped-kotoiq.mjs
public/: AGENT_SCHEMA.sql  CORE_TABLES.sql  GHL_SCHEMA.sql  KOTO_RUN_IN_SUPABASE.sql  KOTO_SEED.sql  KOTO_WP_PLUGIN.sql  LINK_AFTER_SIGNUP.sql  MARKETPLACE.sql  ONBOARDING_COLUMNS.sql  ONBOARDING_PROFILE_V2.sql  PROPOSAL_LEARNING.sql  REVIEW_CAMPAIGNS.sql  RLS_POLICIES.sql  RUN_THIS_NOW_consolidated.sql  SCOUT_PIPELINE.sql  manifest.json  manifest.webmanifest  reviews-widget.js
scripts/: agent-smoke-test.ts  build-desktop.mjs  check-env-leaks.mjs  enrich-cws-draft.mjs  enrich-facilities.mjs  enrich-ipeds.mjs  enrich-school-stats.mjs  fleet-app-password-check.cjs  noop.js  (+14 more)
(+1804 files in other folders)
